# rag-physics

./: .env.example  .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/api/: client.ts  types.ts
client/src/components/: FormulaSheet.module.css  FormulaSheet.tsx  Layout.module.css  Layout.tsx  LoginPage.module.css  LoginPage.tsx  ProtectedRoute.tsx
client/src/components/Sidebar/: ChatInput.module.css  ChatInput.tsx  ChatTab.module.css  ChatTab.tsx  ConversationThread.module.css  ConversationThread.tsx  FlashcardsTab.module.css  FlashcardsTab.tsx  FormulasTab.module.css  FormulasTab.tsx  MessageBubble.module.css  MessageBubble.tsx  ProfilePanel.module.css  ProfilePanel.tsx  Sidebar.module.css  Sidebar.tsx  SidebarTabs.module.css  SidebarTabs.tsx  SourceList.module.css  SourceList.tsx  StudyGuidesTab.tsx  SummariesTab.tsx  TaskButtons.module.css  TaskButtons.tsx  rehypeCitationLinks.ts
client/src/components/TextbookLibrary/: TextbookLibrary.module.css  TextbookLibrary.tsx
client/src/components/TextbookReader/: PDFViewer.module.css  PDFViewer.tsx  PageControls.module.css  PageControls.tsx  TextbookReader.module.css  TextbookReader.tsx  TextbookSearch.module.css  TextbookSearch.tsx
client/src/context/: AuthContext.tsx  ConversationContext.tsx  GeneratedContentContext.tsx  ProfileContext.tsx  TextbookContext.tsx
client/src/utils/: katex.ts
server/: auth.py  classifier.py  config.py  db.py  embedding.py  equations.py  main.py  models.py  prompts.py  pyproject.toml  retrieval.py  schemas.py  services.py
server/scripts/: ingest_textbook.py  migrate_vectors.py
server/tests/: conftest.py  test_core.py  test_pipeline.py
server/tests/data/: generate_test_pdf.py
